# tariffextractor

./: LICENSE  README.md  main.py  pyproject.toml  streamlit_app.py  wizard_ui.py
pages/: step1.py  step2.py  step3.py  step4.py  step5.py
tariff_extractor/: __init__.py  bill.py  extract.py  validate.py
tariff_extractor/schema/: tariff.schema.json
tariff_extractor/schema/examples/: flat_rate.json  seasonal_flat.json  tiered_rate.json
